--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,9 @@
     "normalize.css": "~3.0.2",
     "o-colors": ">=2.5.0 <4",
     "o-hoverable": "~1.1.0",
-    "o-fonts": "~1.6.4"
+    "o-fonts": "~1.6.4",
+    "o-header": "~3.0.6",
+    "o-footer": "~3.1.1",
+    "o-grid": "~3.2.5"
   }
 }
