--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "o-fonts": "~1.6.4",
     "o-header": "~3.0.6",
     "o-footer": "~3.1.1",
-    "o-grid": "~3.2.5"
+    "o-grid": "~3.2.5",
+    "plain-jsx": "*"
   }
 }
