--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.3.0",
     "gulp-util": "^3.0.6",
+    "igdeploy": "^0.1.0",
     "nodemon": "^1.4.1",
     "origami-build-tools": "^3.3.4",
     "ramjet": "^0.4.5",
